[fix](catalog) hive: expose $partitions sys table via partition_values TVF (R3)
A flipped plain-hive table is a PluginDrivenExternalTable, whose
getSupportedSysTables() discovers sys-table names from the connector and
wrapped every name as a native PluginDrivenSysTable. HiveConnectorMetadata
reported none, so `t$partitions` resolved to "Unknown sys table" (and
`desc t$partitions` to "sys table not found"). Legacy HMSExternalTable
returned PartitionsSysTable — a TVF-backed sys table routed to the generic
partition_values TVF (already fully plugin-aware, incl. the BE->FE metadata
fetch); only the $partitions suffix -> sys-table -> TVF bridge was lost.

fe-core cannot map the bare name "partitions" -> TVF unconditionally:
iceberg (MetadataTableType.PARTITIONS) and paimon (SystemTableLoader) also
report "partitions" as NATIVE metadata tables, so a name-based map would
misroute their t$partitions into the hive TVF. The kind must be
connector-declared.

Fix (connector-declared kind, supports*-style opt-in, iron-rule clean):
- SPI ConnectorTableOps.isPartitionValuesSysTable(session,handle,sysName),
  default false (native). fe-core cannot infer the kind from an empty
  getSysTableHandle (kind is needed at discovery; getSysTableHandle is
  eager/auth-bearing; iceberg legitimately omits position_deletes).
- fe-core PluginDrivenExternalTable.getSupportedSysTables() branches on it:
  TVF-declared -> PartitionsSysTable.INSTANCE (keyed on its own name to
  avoid the createFunction suffix-strip crash), else native
  PluginDrivenSysTable. SysTableResolver already routes any TvfSysTable
  through the TVF path for SELECT/DESCRIBE/validate.
- HiveConnectorMetadata: listSupportedSysTables returns ["partitions"]
  UNCONDITIONALLY for a HiveTableHandle (partitioned or not) so a
  $partitions query on a non-partitioned table reaches the TVF ctor and
  throws "... is not a partitioned table", mirroring legacy;
  isPartitionValuesSysTable returns true for "partitions", delegating a
  forei